--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "jeyroik/extas-players": "1.*",
     "jeyroik/extas-samples": "1.*",
     "jeyroik/extas-conditions": "0.*",
-    "jeyroik/extas-repositories-mongo": "0.*"
+    "jeyroik/extas-repositories-mongo": "0.*",
+    "jeyroik/extas-repositories-uuid-field": "0.*"
   },
   "autoload": {
     "psr-4": {
