--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,24 @@
   "require": {
     "jeyroik/extas-installer": "2.*",
     "jeyroik/extas-players": "1.*",
-    "jeyroik/extas-samples": "1.*",
+    "jeyroik/extas-samples": "2.*",
     "jeyroik/extas-conditions": "0.*",
     "jeyroik/extas-repositories-mongo": "1.*",
-    "jeyroik/extas-repositories-uuid-fields": "0.*"
+    "jeyroik/extas-repositories-fields-uuid": "0.*",
+    "jeyroik/extas-repositories-fields-sample-names": "0.*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9",
+    "vlucas/phpdotenv": "^3.4",
+    "phpstan/phpstan": "0.*"
   },
   "autoload": {
     "psr-4": {
       "deflou\\": "src/"
     }
+  },
+  "scripts": {
+    "test": "vendor/bin/phpunit --testdox --coverage-clover=coverage.xml --whitelist=src tests",
+    "stan": "vendor/bin/phpstan analyse -l 5 src"
   }
 }
