--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,20 @@
   "name": "jeyroik/deflou-core",
   "description": "Core package for DeFlou",
   "require": {
-    "jeyroik/extas-installer": "2.*",
     "jeyroik/extas-players": "1.*",
     "jeyroik/extas-samples": "2.*",
     "jeyroik/extas-conditions": "0.*",
     "jeyroik/extas-repositories-mongo": "1.*",
+    "jeyroik/extas-fields": "0.*",
     "jeyroik/extas-repositories-fields-uuid": "0.*",
-    "jeyroik/extas-repositories-fields-sample-names": "0.*"
+    "jeyroik/extas-repositories-fields-sample-names": "0.*",
+    "jeyroik/extas-exceptions": "0.*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9",
     "vlucas/phpdotenv": "^3.4",
-    "phpstan/phpstan": "0.*"
+    "phpstan/phpstan": "0.*",
+    "jeyroik/extas-snuffbox": "0.*"
   },
   "autoload": {
     "psr-4": {
