--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "phpunit/phpunit": "^9",
     "vlucas/phpdotenv": "^3.4",
     "phpstan/phpstan": "0.*",
-    "jeyroik/extas-snuffbox": "0.*"
+    "jeyroik/extas-snuffbox": "0.*",
+    "jeyroik/extas-snuffbox-repositories": "0.*"
   },
   "autoload": {
     "psr-4": {
